# mc

./: .gitignore  readme.md
minecraft/handheld/project/android_java/: .project
minecraft/handheld/src/client/: Minecraft.cpp
minecraft/handheld/src/client/gui/screens/: StartMenuScreen.cpp
minecraft/handheld/src/client/gui/screens/touch/: TouchStartMenuScreen.cpp
minecraft/handheld/src/client/renderer/: Textures.h  gles.cpp
minecraft/handheld/src/network/: ClientSideNetworkHandler.cpp  ServerSideNetworkHandler.cpp
minecraft/web/: Android.mk  CMakeLists.txt
minecraft/web/src/: keyboard.cpp  keyboard.h  main.cpp  network.cpp  network.h  texture.cpp  texture.h
server/: main.ts  package-lock.json  package.json  packet.ts
